# ClaimsAdvisor

./: .gitignore  CNAME  README.md
claimsadvisor/: app.py  create_pdf.py  dummy_claim.html  main.py  pyproject.toml
claimsadvisor/config/: agents.yaml  tasks.yaml
claimsadvisor/src/: .env  crew.py  models.py  parser.py
